@@ -28,6 +28,10 @@ Bugs:
 - ALL (minor): Comparison of codes of Messages changed due to changes in how PHP8 compares
   strings and numbers.
 
+Refactorings:
+- ALL: Removed vat breakdown from Totals. Totals now merely represents an amount (broken
+  down in a price inc, price ex, and vat amount).
+
 8.2.0 (2024-07-11) (ALL)
 ------------------------
 Features:
